First pass fix for scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@ html {
 #root {
   @apply min-h-screen;
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
